Fix Featured Projects styling
Update styling of the Featured Projects component and the Featured
Projects card to be mobile first

Decrease margins in mobile view of Featured Projects section

Change styling of Featured Projects card to fix overlapping cards and
improve layout while zooming in and out

Fix mobile view of Featured Projects section

Updates also appear to have fixed overlapping cards in Current Projects
section of Our Work page

--- a/frontend/src/styles/home/FeaturedProjects.module.css
+++ b/frontend/src/styles/home/FeaturedProjects.module.css
@@ -1,15 +1,19 @@
-.center {
-  min-height: 350px;
-  text-align: center;
-  position: relative;
-  margin-top: -25%;
-}
-
 .featuredProjectCards {
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 10%;
+  margin-right: 10%;
+  justify-content: center;
+  align-items: center;
 }
 
 .seeMore {
   text-align: center;
+}
+
+@media screen and (min-width: 700px) {
+
+  .featuredProjectCards {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+
 }
